@@ -3,14 +3,20 @@
 timemachine:
   id: 1
   name: Build a working time machine
+  description: ''
+  done: 0
   user_id: 1
 
 moremoney:
   id: 2
   name: Make more money than Billy Gates
+  description: ''
+  done: 0  
   user_id: 1
 
 gardenclean:
   id: 3
   name: Evict dinosaurs from the garden
+  description: ''
+  done: 0  
   user_id: 1
